@@ -43,8 +43,8 @@ public class GreaterThan extends BinaryExpression {
     @Override
     public Boolean evaluate() {
         try {
-            Integer intRightValue = new Integer(getRight());
-            Integer intLeftValue = new Integer(getLeft());
+            Integer intRightValue = Integer.valueOf(getRight());
+            Integer intLeftValue = Integer.valueOf(getLeft());
             return intLeftValue > intRightValue;
         } catch (NumberFormatException nfe) {
             LOG.warn(Statement.GREATER_THAN + " operator can be applied only to integer values");
